Supplier entity mapping