@@ -1,58 +1,80 @@
 package com.api.product.stock.control.service;
 
+import com.api.product.stock.control.product.DataProductDto;
 import com.api.product.stock.control.product.Product;
 import com.api.product.stock.control.product.ProductRepository;
 import com.api.product.stock.control.product.RegisterProductDto;
+import com.api.product.stock.control.supplier.Supplier;
+import com.api.product.stock.control.supplier.SupplierRepository;
+import jakarta.mail.MessagingException;
 import jakarta.persistence.EntityNotFoundException;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.dao.DataIntegrityViolationException;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-
+import java.io.UnsupportedEncodingException;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class ProductService {
 
     @Autowired
-    private ProductRepository repository;
+    private ProductRepository productRepository;
+
+    @Autowired
+    private SupplierRepository supplierRepository;
+
+    @Autowired
+    private EmailService emailService;
 
     @Transactional
-    public Product insert(RegisterProductDto data) {
-        if(repository.findByBatch(data.batch()) != null) {
+    public DataProductDto insert(RegisterProductDto data) {
+        if(productRepository.findByBatch(data.batch()) != null) {
             throw new DataIntegrityViolationException("Integrity Error: Batch already exists");
         }
-        if(repository.findByBatch(data.batch()) != null) {
+        if(productRepository.findByBatch(data.batch()) != null) {
             throw new DataIntegrityViolationException("Integrity Error: Batch already exists");
         }
-        return repository.save(new Product(data));
+        Supplier supplier = supplierRepository.getReferenceById(data.idSupplier());
+        Product product = productRepository.save(new Product(data,supplier));
+        try {
+            emailService.sendMail(product);
+        } catch (MessagingException | UnsupportedEncodingException e) {
+            System.out.println("Problemas no envio do email:" + e.getMessage());
+        }
+
+        return new DataProductDto(product.getName(), product.getBatch(),product.getSupplier().getName(), product.getSupplier().getCnpj());
     }
 
-    public List<Product> findAll() {
-        return repository.findAll();
+    public List<DataProductDto> findAll() {
+        return productRepository.findAll().stream().map((Product x) -> new DataProductDto(x.getName(),x.getBatch(),x.getSupplier().getName(),x.getSupplier().getCnpj()))
+                .collect(Collectors.toList());
     }
 
-    public List<Product> findAllActive() {
-        return findAll().stream().filter(x -> x.getActive().equals(true)).toList();
+    public List<DataProductDto> findAllActive() {
+        return productRepository.findAll().stream().filter(x -> x.getActive().equals(true))
+                .map((Product x) -> new DataProductDto(x.getName(),x.getBatch(),x.getSupplier().getName(),x.getSupplier().getCnpj()))
+                .collect(Collectors.toList());
     }
 
     public Product findById(Long id) {
         launcherEntityNotFoundException(id);
-        return repository.getReferenceById(id);
+        return productRepository.getReferenceById(id);
     }
 
     @Transactional
-    public Product update(RegisterProductDto data, Long id) {
+    public DataProductDto update(RegisterProductDto data, Long id) {
         launcherEntityNotFoundException(id);
         Product product = findById(id);
         updateData(product, data);
-        return product;
+        return new DataProductDto(product.getName(), product.getBatch(),product.getSupplier().getName(), product.getSupplier().getCnpj());
     }
 
     @Transactional
     public void delete(Long id) {
         launcherEntityNotFoundException(id);
-        repository.deleteById(id);
+        productRepository.deleteById(id);
     }
 
     @Transactional
@@ -89,7 +111,7 @@ public class ProductService {
 
     // Not found do getReferenceById
     private void launcherEntityNotFoundException(Long id) {
-        if(repository.findById(id).isEmpty()) {
+        if(productRepository.findById(id).isEmpty()) {
             throw new EntityNotFoundException("Product not found");
         }
     }
